tests/fixtures/invalid/round_no_args.py
# round() requires at least 1 argument
x = round()
